# u-net-segmentation

./: .gitignore  0_roadmap.md  EDA.ipynb  EDA_FINAL.md  EDA_info.md  Obligatorio-letra.ipynb  README.md  pyproject.toml  unet.ipynb
