[project]
name = "imagenette"
version = "0.1.0"
description = ""
authors = [
    {name = "kidnixt", email = "kidnixt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
package-mode = false

[tool.poetry.dependencies]
numpy = ">=2.2.5,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
matplotlib = ">=3.10.1,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
tqdm = ">=4.67.1,<5.0.0"
opencv-python = ">=4.12.0.88,<5.0.0.0"
ipywidgets = ">=8.1.7,<9.0.0"
torchinfo = ">=1.8.0,<2.0.0"
nbformat = ">=5.10.4,<6.0.0"
wandb = ">=0.22.1,<0.23.0"
scikit-learn = "^1.7.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
